--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .vscode
-recursion/recursion
-operators/vectors
-operators/complex_nums
-pointers/pointers
-pointers/buffer
-inheritance/sensors
+cpp/recursion/recursions
+cpp/recursion/recurson_calc
+cpp/pointers/pointers
+cpp/object/buffer
+cpp/object/operators/vectors
+cpp/object/operators/complex_nums
+cpp/object/inheritance/sensors-abstract_class
