--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ cpp/object/buffer
 cpp/object/operators/vectors
 cpp/object/operators/complex_nums
 cpp/object/inheritance/sensors-abstract_class
+cpp/object/stack
