--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ cpp/object/operators/Complex_nums
 cpp/object/inheritance/Sensors_abstract_class
 cpp/object/Stack
 cpp/object/templates/Stack
+cpp/pointers/Function_ptr
