--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ cpp/object/inheritance/Sensors_abstract_class
 cpp/object/Stack
 cpp/object/templates/Stack
 cpp/pointers/Function_ptr
+cpp/object/templates/Standard_template_librarys
