--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ cpp/object/Stack
 cpp/object/templates/Stack
 cpp/pointers/Function_ptr
 cpp/object/templates/Standard_template_librarys
+
+cpp/object/SOLID/SingleResponsibility/Invoice/main
