Close-Open and Liskov example

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ cpp/pointers/Function_ptr
 cpp/object/templates/Standard_template_librarys
 
 cpp/object/SOLID/SingleResponsibility/Invoice/main
+cpp/object/SOLID/Open-Close/Invoice/main
