factory: shapes factory example

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ cpp/object/templates/Standard_template_librarys
 
 cpp/SOLID/SingleResponsibility/Invoice/main
 cpp/SOLID/Open-Close/Invoice/main
+
+cpp/DesignPatterns/Factory
