--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ cpp/SOLID/SingleResponsibility/Invoice/main
 cpp/SOLID/Open-Close/Invoice/main
 
 cpp/DesignPatterns/Factory/Shapes/main
+
+cpp/const/Consts
