--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ cpp/object/functor/lambda/UnnamedFunctor-Lambda
 cpp/STL/algorithm/Find
 cpp/STL/algorithm/sorting/Sort
 cpp/STL/algorithm/sorting/SortObjects
+cpp/STL/algorithm/sorting/Partial_sort
