--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ cpp/STL/algorithm/sorting/Sort
 cpp/STL/algorithm/sorting/SortObjects
 cpp/STL/algorithm/sorting/Partial_sort
 cpp/STL/algorithm/sorting/Sorted_until
+
+cpp/STL/algorithm/Copy
