--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ cpp/object/functor/lambda/UnnamedFunctor-Lambda
 
 cpp/STL/algorithm/searching/Find
 cpp/STL/algorithm/searching/Nth_element
+cpp/STL/algorithm/searching/Binary_search
 
 cpp/STL/algorithm/sorting/Sort
 cpp/STL/algorithm/sorting/SortObjects
