Add Date module

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ cpp/STL/algorithm/sorting/Sorted_until
 
 cpp/STL/algorithm/copying/Copy
 cpp/STL/algorithm/copying/Copy_backwrd
+
+cpp/try_catch/Date/Main
